fix: tiles-settings responsivity and visibleTileCount formControl bug

--- a/src/app/components/tiles-grid/tiles-grid.scss
+++ b/src/app/components/tiles-grid/tiles-grid.scss
@@ -8,7 +8,6 @@ section {
 
 .grid-title {
   margin-bottom: 0;
-  font-family: Poppins;
   font-size: 10px;
   font-weight: 500;
   line-height: 1.6;
@@ -16,9 +15,9 @@ section {
   color: #9fa7bb;
 }
 .grid-subtitle {
-  margin: 0 auto clamp(32px, 8vw, 61px);
-  font-family: Poppins;
-  font-size: clamp(22px, 5vw, 34px);
+  margin: 0 auto 58px;
+  font-size: 34px;
+
   font-weight: 600;
   line-height: 1.24;
   letter-spacing: normal;
